Bug 2167 - MIPS build fails due to change to pthreadtype.h
Summary: MIPS build fails due to change to pthreadtype.h
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-17 23:04 UTC by Jim Gifford
Modified: 2018-04-19 14:03 UTC (History)
1 user (show)

See Also:
Host: mipsel-unknown-linux-gnu
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
Patch for MIPS pthreadstype (788 bytes, patch)
2006-01-17 23:05 UTC, Jim Gifford
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Gifford 2006-01-17 23:04:56 UTC
Unable to build MIPS with the current glibc snapshots. Upon investigation I
noticed the pthreads type file was updated. Attached is a patch that will update
the pthreadstype to the current setup for other architectures. Based on the
changes to x86_64 and sparc.
Comment 1 Jim Gifford 2006-01-17 23:05:16 UTC
Created attachment 838 [details]
Patch for MIPS pthreadstype
Comment 2 Sourceware Commits 2006-01-18 08:41:54 UTC
Subject: Bug 2167

CVSROOT:	/cvs/glibc
Module name:	libc
Changes by:	aj@sources.redhat.com	2006-01-18 08:41:47

Modified files:
	nptl/sysdeps/unix/sysv/linux/mips/bits: pthreadtypes.h 
	nptl           : ChangeLog 

Log message:
	[BZ #2167]
	* sysdeps/unix/sysv/linux/mips/bits/pthreadtypes.h
	(pthread_mutex_t): Follow changes for other archs.  Based on patch
	by Jim Gifford <patches@jg555.com>.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/nptl/sysdeps/unix/sysv/linux/mips/bits/pthreadtypes.h.diff?cvsroot=glibc&r1=1.1&r2=1.2
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/nptl/ChangeLog.diff?cvsroot=glibc&r1=1.853&r2=1.854

Comment 3 Andreas Jaeger 2006-01-18 08:42:19 UTC
I added a revised version of your patch, thanks.